--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon src/server.js",
     "server": "nodemon src/server.js",
-    "test": "node src/server.js",
+    "debug": "node --inspect src/server.js",
     "format": "prettier --single-quote --trailing-comma all --tab-width 2 --write 'src/**/*.{js, scss, json}'",
     "beauty": "lint-staged"
   },
