--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "nodemon src/server.js",
-    "server": "nodemon src/server.js",
+    "server": "nodemon --watch src src/server.js",
     "debug": "node --inspect src/server.js",
     "format": "prettier --single-quote --trailing-comma all --tab-width 2 --write 'src/**/*.{js, scss, json}'",
     "beauty": "lint-staged"
