--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^6.1.8",
+    "mongoose": "^6.3.0",
     "mongoose-delete": "^0.5.4",
+    "mongoose-sequence": "^5.3.1",
     "mongoose-slug-generator": "^1.0.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-html-to-image": "^3.2.4"
   },
   "devDependencies": {
     "husky": "^7.0.4",
