--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     }
   },
   "dependencies": {
+    "async": "^1.5.2",
     "axios": "^0.25.0",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
